# CppConcurrencyInAction

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  open_vs.bat
.claude/: settings.local.json
docs/: build_and_debug_vs.md  plan.md  readme.md  study_notes.md
docs/study_notes/: chapter01_hello_world_concurrency.md  chapter02_managing_threads.md  chapter03_sharing_data_between_threads.md
src/chapter01/: hello_world.cpp
src/chapter02/: 2.1_thread_guard.h  2.2_pass_params.h  2.3_joining_thread.h  2.3_scoped_thread.h  2.4_batch_threads.h  2.4_multi_thread_accumulate.h  joining_thread.h  main.cpp  transfer_ownership_of_a_thread.h
src/chapter03/: 3.1_data_race.h  3.2_mutex.h  main.cpp
